Added integration for NSE Data source